FSPA-290 #comment fixed issue with scrollbar and popover position

--- a/src/app/shared/components/bd-perfect-scrollbar/bd-perfect-scrollbar.component.scss
+++ b/src/app/shared/components/bd-perfect-scrollbar/bd-perfect-scrollbar.component.scss
@@ -5,7 +5,7 @@ bd-perfect-scrollbar {
   //sass-lint:disable no-important
 
   .scroll-container {
-    position: static !important;
+    position: inherit !important;
     width: 100%;
     height: $horizontal-scroll-container-height;
     padding: 0;
